Align dropdown menu correctly

--- a/styles/main.css
+++ b/styles/main.css
@@ -40,10 +40,6 @@ body {
   transition: 0.4s;
 }
 
-.dropdown-hover {
-  width: 110px;
-}
-
 .dropdown-menu a {
   text-decoration: none;
   color: white;
@@ -51,6 +47,8 @@ body {
   font-size: 2rem;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   display: block;
+  border: solid rgba(255, 255, 255, 0.05);
+  border-radius: 5px;
 }
 
 .dropdown-menu {
@@ -58,7 +56,7 @@ body {
   background-color: rgba(0, 0, 0, 0.5);
   position: absolute;
   top: 40px;
-  /* width: auto; */
+  max-width: 400px;
 }
 
 .dropdown:hover .dropdown-menu {
